One more match type inconsistency in tests